# FastByteTrackerCpp

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  webcam_bytetrack_test.py  webcam_roi_bytetrack_test.py  webcam_template_bytetrack_test.py  webcam_yolo11_bytetrack.py  webcam_yolo11_sahi_bytetrack.py
bytetrack_cpp/: __init__.py  _core.cpp  _core.pyi
bytetrack_cpp/native/BYTETrack/include/: BYTETracker.h  STrack.h  cv_compat.h  dataType.h
bytetrack_cpp/native/BYTETrack/src/: BYTETracker.cpp  kalmanFilter.cpp  utils.cpp
bytetrack_cpp/native/include/: BYTETracker.h  STrack.h  cv_compat.h  kalmanFilter.h
bytetrack_cpp/native/src/: BYTETracker.cpp  STrack.cpp  utils.cpp
